fix(core-price-lockup): align rateText to bottom with size small

--- a/packages/PriceLockup/PriceLockup.modules.scss
+++ b/packages/PriceLockup/PriceLockup.modules.scss
@@ -56,6 +56,10 @@
 .priceWrapper {
   align-items: flex-end;
   margin-bottom: 8px;
+
+  &.small > span {
+    line-height: 1;
+  }
 }
 
 .dollarSignH1Style {
